--- a/index.html
+++ b/index.html
@@ -18,13 +18,28 @@
                     </a>
                 </li>
                 <li>
-                    <a href="index.html">
-                        Home
+                    <a href="about.html">
+                        about
                     </a>
                 </li>
                 <li>
                     <a href="contact.html">
-                        Contact
+                        contact
+                    </a>
+                </li>
+                <li>
+                    <a href="https://github.com/steinbock277/">
+                        github
+                    </a>
+                </li>
+                <li>
+                    <a href="contact.html">
+                        linkedin
+                    </a>
+                </li>
+                <li>
+                    <a href="contact.html">
+                        kaggle
                     </a>
                 </li>
             </ul>
@@ -45,9 +60,25 @@
         </section>
     </main>
     <footer>
-        <a href="#">
-            Go to top
-        </a>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">
+                        &copy; <script>document.write(new Date().getFullYear())</script> Ferdi SEN
+                    </a>
+                </li>
+                <li>
+                    <a href="about.html">
+                        about
+                    </a>
+                </li>
+                <li>
+                    <a href="contact.html">
+                        contact
+                    </a>
+                </li>
+            </ul>
+        </nav>
     </footer>
 </body>
 </html>
