unnecessary classes and lists deleted

--- a/about.html
+++ b/about.html
@@ -26,17 +26,17 @@
                         </a>
                     </li>
                     <li>
-                        <a href="contact.html">
+                        <a href="https://github.com/steinbock277/" target="_blank">
                             <img src="img/svg_github.svg" alt="github logo" />
                         </a>
                     </li>
                     <li>
-                        <a href="contact.html">
+                        <a href="https://www.linkedin.com/in/ismet-ferdi-sen/" target="_blank">
                             <img src="img/svg_linkedin.svg" alt="linkedin logo" />
                         </a>
                     </li>
                     <li>
-                        <a href="contact.html">
+                        <a href="https://www.kaggle.com/ismetferdisen" target="_blank">
                             <img src="img/svg_kaggle.svg" alt="kaggle logo" />
                         </a>
                     </li>
@@ -51,7 +51,7 @@
                 <ul>
                     <li>
                         <a href="index.html">
-                            &copy; <script>document.write(new Date().getFullYear())</script> Ferdi SEN
+                            &copy; <script>document.write(new Date().getFullYear())</script> Ismet Ferdi SEN
                         </a>
                     </li>
                     <li>
